# spectra

./: .gitignore  README.md  docker-compose.yml  docker-run.sh  stack.yaml
core/domain/: README.md  domain.cabal
core/domain/src/: Ping.hs
core/domain/src/Data/: Session.hs  Symbol.hs  Variance.hs
docker/scripts/: spectra_create_topics.sh
docs/: spectra-high-level-arch-data.json
shared/types/: LICENSE  README.md  types.cabal
shared/types/src/: Ping.hs
shared/types/src/Internal/Data/: Types.hs
